[gd_scene load_steps=8 format=2]

[ext_resource path="res://Pickup.gd" type="Script" id=1]
[ext_resource path="res://good.png" type="Texture" id=2]
[ext_resource path="res://bad.png" type="Texture" id=3]
[ext_resource path="res://good.wav" type="AudioStream" id=4]
[ext_resource path="res://hurt.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 1.51377

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 14.1954, 13.556 )

[node name="Pickup" type="KinematicBody2D" groups=[
"pickup",
]]

position = Vector2( 0.0852509, 0 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
speed = 400

[node name="Sprite_good" type="Sprite" parent="." index="0"]

scale = Vector2( 0.746492, 0.746492 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite_bad" type="Sprite" parent="." index="1"]

visible = false
modulate = Color( 0.3125, 0.3125, 0.3125, 1 )
position = Vector2( -4.51866, 0 )
scale = Vector2( 0.746931, 0.772879 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 0, 5.0302 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 20.0
one_shot = true
autostart = true

[node name="Move_timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Pickup" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 4 )
volume_db = -30.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Hurt" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="Move_timer" to="." method="_on_Move_timer_timeout"]

[connection signal="finished" from="Pickup" to="." method="_on_sound_finished"]

[connection signal="finished" from="Hurt" to="." method="_on_sound_finished"]


